增加搜索功能

--- a/index.html
+++ b/index.html
@@ -37,9 +37,16 @@
 
       </div>
       </section>
+      <div class="search">
+          <input type="text" name="todoitem" id="add-list" class="in-edit" placeholder="我的心愿">
+          <button class="btn">搜索</button>
+      </div>
       <section class="content">
-        <ul class="content-list commentBox-content">
+        <ul class="content-list commentBox-content ">
          
+        </ul>
+        <ul class="content-list hide">
+          
         </ul>
         <a href="http://www.baidu.com" class="goto"><div class="push"></div></a> 
       </section>
