--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header class="header">
     <div class="header-nav"> 
       <div class="logo"></div>
-      <div class="title">愿你所得</div>     
+      <div class="title">愿你所得,如你所愿</div>     
     </div>
   </header>
   <article class="main">
