--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header class="header">
     <div class="header-nav"> 
       <div class="logo"></div>
-      <div class="title">愿你所得,如你所愿</div>     
+      <div class="title">愿你所得 如你所愿</div>     
     </div>
   </header>
   <article class="main">
@@ -23,10 +23,10 @@
       <section class="banner">
         <div class="swiper-container">
           <div class="swiper-wrapper">
-              <div class="swiper-slide"><a href="http://www.jd.com"><img src="./img/21.png" alt=""></a></div>
-              <div class="swiper-slide"><a href="http://www.baidu.com"><img src="./img/22.png" alt=""></a></div>
-              <div class="swiper-slide"><a href="http://www.taobao.com"><img src="./img/23.png" alt=""></a></div>
-              <div class="swiper-slide"><a href=""><img src="./img/24.png" alt=""></a></div>
+              <div class="swiper-slide"><a href="http://www.jd.com"><img src="./banner/1.png" alt=""></a></div>
+              <div class="swiper-slide"><a href="http://www.baidu.com"><img src="./banner/2.png" alt=""></a></div>
+              <div class="swiper-slide"><a href="http://www.taobao.com"><img src="./banner/3.png" alt=""></a></div>
+              <div class="swiper-slide"><a href="#"><img src="./img/4.png" alt=""></a></div>
           </div>
           <!-- 如果需要分页器 -->
           <div class="swiper-pagination"></div>
