--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <div class="swiper-slide"><a href="http://www.jd.com"><img src="./banner/1.png" alt=""></a></div>
               <div class="swiper-slide"><a href="http://www.baidu.com"><img src="./banner/2.png" alt=""></a></div>
               <div class="swiper-slide"><a href="http://www.taobao.com"><img src="./banner/3.png" alt=""></a></div>
-              <div class="swiper-slide"><a href="#"><img src="./img/4.png" alt=""></a></div>
+              <div class="swiper-slide"><a href="#"><img src="./banner/4.png" alt=""></a></div>
           </div>
           <!-- 如果需要分页器 -->
           <div class="swiper-pagination"></div>
