增加按日期搜索功能

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="./src/reset.css">
   <link rel="stylesheet" href="./src/swiper-4.2.6.min.css">
   <link rel="stylesheet" href="./src/main.css">
+  
   <title>宝民心愿墙</title>
 </head>
 <body>
@@ -38,8 +39,9 @@
       </div>
       </section>
       <div class="search">
-          <input type="text" name="todoitem" id="add-list" class="in-edit" placeholder="我的心愿">
+          <input type="text" name="todoitem" id="test1" class="in-edit" placeholder="我的心愿">
           <button class="btn">搜索</button>
+          <!-- <input type="text" name="" id="test1"> -->
       </div>
       <section class="content">
         <ul class="content-list commentBox-content ">
@@ -53,9 +55,10 @@
       <div class="count"><span class="callback" style="display: none">返回</span><span>一共100条心愿</span></div>
     </div>
   </article>
-  <script type="text/javascript" src="./withingData/wish.json"></script>
+  <script type="text/javascript" src="./wishingData/wish.json"></script>
   <script src="./src/swiper-4.2.6.min.js"></script>
   <script src="./src/initSwiper.js"></script>
+  <script src="./src/layDate-v5.0.9/laydate/laydate.js"></script> 
   <script type="text/javascript" src="./src/jquery-2.0.3.min.js"></script>
   <script src="./src/main.js"></script>
 </body>
