--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
       <section class="banner">
         <div class="swiper-container">
           <div class="swiper-wrapper">
-              <div class="swiper-slide"><a href="http://www.jd.com"><img src="./banner/1.png" alt=""></a></div>
-              <div class="swiper-slide"><a href="http://www.baidu.com"><img src="./banner/2.png" alt=""></a></div>
+              <div class="swiper-slide"><a href="http://www.hao123.com"><img src="./banner/1.png" alt=""></a></div>
+              <div class="swiper-slide"><a href="http://www.jd.com"><img src="./banner/2.png" alt=""></a></div>
               <div class="swiper-slide"><a href="http://www.taobao.com"><img src="./banner/3.png" alt=""></a></div>
-              <div class="swiper-slide"><a href="#"><img src="./banner/4.png" alt=""></a></div>
+              <div class="swiper-slide"><a href="http://www.taobao.com"><img src="./banner/4.png" alt=""></a></div>
           </div>
           <!-- 如果需要分页器 -->
           <div class="swiper-pagination"></div>
@@ -50,7 +50,7 @@
         <ul class="content-list hide">
           
         </ul>
-        <a href="http://www.baidu.com" class="goto"><div class="push"></div></a> 
+        <a href="http://www.jd.com" class="goto"><div class="push"></div></a> 
       </section>
       <div class="count"><span class="callback" style="display: none">返回</span><span>一共100条心愿</span></div>
     </div>
