--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       <section class="banner">
         <div class="swiper-container">
           <div class="swiper-wrapper">
-              <div class="swiper-slide"><a href="http://www.hao123.com"><img src="./banner/1.png" alt=""></a></div>
+              <div class="swiper-slide"><a href="http://www.baidu.com"><img src="./banner/1.png" alt=""></a></div>
               <div class="swiper-slide"><a href="http://www.jd.com"><img src="./banner/2.png" alt=""></a></div>
-              <div class="swiper-slide"><a href="http://www.taobao.com"><img src="./banner/3.png" alt=""></a></div>
+              <div class="swiper-slide"><a href="http://www.xiaomi.com"><img src="./banner/3.png" alt=""></a></div>
               <div class="swiper-slide"><a href="http://www.taobao.com"><img src="./banner/4.png" alt=""></a></div>
           </div>
           <!-- 如果需要分页器 -->
