--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
       <section class="banner">
         <div class="swiper-container">
           <div class="swiper-wrapper">
-              <div class="swiper-slide"><a href="http://www.baidu.com"><img src="./banner/1.png" alt=""></a></div>
-              <div class="swiper-slide"><a href="http://www.jd.com"><img src="./banner/2.png" alt=""></a></div>
-              <div class="swiper-slide"><a href="http://www.xiaomi.com"><img src="./banner/3.png" alt=""></a></div>
-              <div class="swiper-slide"><a href="http://www.taobao.com"><img src="./banner/4.png" alt=""></a></div>
+              <div class="swiper-slide"><a href="https://mp.weixin.qq.com/s?__biz=MzU3NjA5MDYyMw==&mid=2247485434&idx=1&sn=97fc099b739bf2c7d2e860847a1aeb85&chksm=fd187f6aca6ff67c8b79ce2474fa46b223b7a36d91f012f21b191799621c28f3536e5e16f8d6#rd"><img src="./banner/1.png" alt=""></a></div>
+              <div class="swiper-slide"><a href="https://mp.weixin.qq.com/s?__biz=MzU3NjA5MDYyMw==&mid=2247485434&idx=3&sn=13a1edb72895217a4b97d0b9e51ea423&chksm=fd187f6aca6ff67c4dc6b1d666bab093dcae6724ab19a3140403ca6bbf4ad54d27ac43f368f6#rd"><img src="./banner/2.png" alt=""></a></div>
+              <div class="swiper-slide"><a href="https://mp.weixin.qq.com/s?__biz=MzU3NjA5MDYyMw==&mid=2247485348&idx=1&sn=c5a1c8a4604a7d023cbe9c315557e458&chksm=fd187f34ca6ff622f2cd63a37d708ff9bcfb5491ca4e5e8537a527010b30b2022cb6a2608dd8#rd"><img src="./banner/3.png" alt=""></a></div>
+              <div class="swiper-slide"><a href="https://mp.weixin.qq.com/s?__biz=MzU3NjA5MDYyMw==&mid=2247485243&idx=1&sn=5126fb2299891ee771a4730799bdf39e&chksm=fd187fabca6ff6bd577811bd13f80593daf23a3f3a66d014cf707a5960d1267394b508ad3c37#rd"><img src="./banner/4.png" alt=""></a></div>
           </div>
           <!-- 如果需要分页器 -->
           <div class="swiper-pagination"></div>
